[gd_scene load_steps=27 format=3 uid="uid://dywvtwc6kfwyc"]

[ext_resource type="Script" uid="uid://co0ik5fi6f2lp" path="res://scenes/cannon_dress_up.gd" id="1_233ry"]
[ext_resource type="Texture2D" uid="uid://dc1wu4egr4anr" path="res://assets/kurshal doll/000-signature.png" id="2_6n658"]
[ext_resource type="Texture2D" uid="uid://47o62ukect6c" path="res://assets/kurshal doll/sw/shawl_down.png" id="2_ty7bg"]
[ext_resource type="Texture2D" uid="uid://bf8vwtjui2wbw" path="res://assets/kurshal doll/sw/kama_down.png" id="3_5p6xy"]
[ext_resource type="Texture2D" uid="uid://bcco311xbfo12" path="res://assets/kurshal doll/body/body_base.png" id="3_ty7bg"]
[ext_resource type="Texture2D" uid="uid://bmkrv6pmfuugd" path="res://assets/kurshal doll/body/cypress.png" id="4_5p6xy"]
[ext_resource type="Texture2D" uid="uid://lh4l0eqag5xx" path="res://assets/kurshal doll/sw/flight_suits.png" id="6_w46sb"]
[ext_resource type="Texture2D" uid="uid://lp1ixvjwijh5" path="res://assets/kurshal doll/sw/kama_up.png" id="7_wj5bi"]
[ext_resource type="Texture2D" uid="uid://bqtp5ad6rt23b" path="res://assets/kurshal doll/sw/belt.png" id="8_0q7b6"]
[ext_resource type="Texture2D" uid="uid://ckcxx2cagbh31" path="res://assets/kurshal doll/sw/plate.png" id="9_1w1lh"]
[ext_resource type="Texture2D" uid="uid://chlinmjovuxpy" path="res://assets/kurshal doll/sw/shawl_up.png" id="10_wot01"]
[ext_resource type="Texture2D" uid="uid://bebagclwug6ej" path="res://assets/kurshal doll/body/hair.png" id="11_01kan"]
[ext_resource type="Texture2D" uid="uid://cqx2fqbmcb5a0" path="res://assets/kurshal doll/sw/helmet.png" id="12_3xs6a"]
[ext_resource type="Texture2D" uid="uid://8r1mgodvvokq" path="res://assets/UI/boot_screen.png" id="12_i428j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dx85r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dx85r"]
size = Vector2(146.5, 76)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_64s04"]
size = Vector2(155, 63.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3e5nl"]
size = Vector2(152, 84.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r27ss"]
size = Vector2(57.5, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cvgrv"]
size = Vector2(80.9346, 180.53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ttcb"]
size = Vector2(119, 271.49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjlt5"]
size = Vector2(374, 46)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ty7bg"]
size = Vector2(98, 57.5)

[sub_resource type="Animation" id="Animation_r27ss"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3e5nl"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hmt25"]
_data = {
&"RESET": SubResource("Animation_r27ss"),
&"fade_out": SubResource("Animation_3e5nl")
}

[node name="CannonDessUp" type="Node2D"]
script = ExtResource("1_233ry")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(960, 720)
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.54902, 0.54902, 0.54902, 1)

[node name="kurshal" type="Node2D" parent="."]
position = Vector2(695, 366)
scale = Vector2(0.4, 0.4)

[node name="shawl_under" type="Sprite2D" parent="kurshal"]
scale = Vector2(1, 1)
texture = ExtResource("2_ty7bg")

[node name="kama_under" type="Sprite2D" parent="kurshal"]
scale = Vector2(1, 1)
texture = ExtResource("3_5p6xy")

[node name="body" type="Sprite2D" parent="kurshal"]
scale = Vector2(1, 1)
texture = ExtResource("3_ty7bg")

[node name="cypress" type="Sprite2D" parent="kurshal"]
scale = Vector2(1, 1)
texture = ExtResource("4_5p6xy")

[node name="flight_suit" type="Sprite2D" parent="kurshal"]
texture = ExtResource("6_w46sb")
hframes = 4
frame = 2

[node name="kama_over" type="Sprite2D" parent="kurshal"]
scale = Vector2(1, 1)
texture = ExtResource("7_wj5bi")

[node name="belt" type="Sprite2D" parent="kurshal"]
scale = Vector2(1, 1)
texture = ExtResource("8_0q7b6")

[node name="chest_plate" type="Sprite2D" parent="kurshal"]
texture = ExtResource("9_1w1lh")

[node name="shawl_up" type="Sprite2D" parent="kurshal"]
texture = ExtResource("10_wot01")

[node name="hair" type="Sprite2D" parent="kurshal"]
texture = ExtResource("11_01kan")
hframes = 2

[node name="helmet" type="Sprite2D" parent="kurshal"]
texture = ExtResource("12_3xs6a")

[node name="signature" type="Sprite2D" parent="kurshal"]
modulate = Color(0.10748, 0.10748, 0.10748, 1)
scale = Vector2(1, 1)
texture = ExtResource("2_6n658")

[node name="text_boxes" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="title_label" type="Label" parent="text_boxes"]
layout_mode = 0
offset_left = 69.0
offset_top = 28.0
offset_right = 416.0
offset_bottom = 119.0
text = "Kurshal Interactive Reference
Mandalorian Armor"
horizontal_alignment = 1

[node name="tid_bit_info_text" type="Label" parent="text_boxes"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 0
offset_left = 41.0
offset_top = 540.0
offset_right = 441.0
offset_bottom = 699.0
theme_override_constants/line_spacing = -9
theme_override_font_sizes/font_size = 24
text = "~Fun Facts about Kurshal~
Pronouns: They/Them
Height: 5'8\" / 172 cm
Hover over different areas to learn more tidbits about them!
"
horizontal_alignment = 1
autowrap_mode = 2

[node name="about" type="Label" parent="text_boxes"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 698.0
offset_top = 25.0
offset_right = 948.0
offset_bottom = 89.0
theme_override_constants/line_spacing = -9
theme_override_font_sizes/font_size = 24
text = "Kurshal is a Mandalorian OC of my own design."
horizontal_alignment = 1
autowrap_mode = 2

[node name="about2" type="Label" parent="text_boxes"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 698.0
offset_top = 88.0
offset_right = 948.0
offset_bottom = 152.0
theme_override_constants/line_spacing = -9
theme_override_font_sizes/font_size = 18
text = "Feel free to take screenshots if you need them for references...
just don't repost without credit/link back please! <3 - tre"
horizontal_alignment = 1
autowrap_mode = 2

[node name="selector_buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="outfit_selectors" type="VBoxContainer" parent="selector_buttons"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 0
offset_left = 44.0
offset_top = 130.0
offset_right = 294.0
offset_bottom = 518.0
alignment = 1

[node name="helmet_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/helmet_box"]
layout_mode = 2
text = "Helmet:"

[node name="helmet_button" type="Button" parent="selector_buttons/outfit_selectors/helmet_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "On"

[node name="hair_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/hair_box"]
layout_mode = 2
text = "Hair:"

[node name="hair_button" type="Button" parent="selector_buttons/outfit_selectors/hair_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Up"

[node name="chest_plate_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/chest_plate_box"]
layout_mode = 2
text = "Chest Plate:"

[node name="chest_plate_button" type="Button" parent="selector_buttons/outfit_selectors/chest_plate_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "On"

[node name="shawl_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/shawl_box"]
layout_mode = 2
text = "Shawl:"

[node name="shawl_button" type="Button" parent="selector_buttons/outfit_selectors/shawl_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "On"

[node name="kama_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/kama_box"]
layout_mode = 2
text = "Kama:"

[node name="kama_button" type="Button" parent="selector_buttons/outfit_selectors/kama_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "On"

[node name="belt_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/belt_box"]
layout_mode = 2
text = "Belt:"

[node name="belt_button" type="Button" parent="selector_buttons/outfit_selectors/belt_box"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "On"

[node name="flight_suit_box" type="HBoxContainer" parent="selector_buttons/outfit_selectors"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="selector_buttons/outfit_selectors/flight_suit_box"]
layout_mode = 2
text = "Flight Suit:"

[node name="flight_suit_down" type="Button" parent="selector_buttons/outfit_selectors/flight_suit_box"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "<"

[node name="flight_suit_up" type="Button" parent="selector_buttons/outfit_selectors/flight_suit_box"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = ">"

[node name="Button" type="Button" parent="selector_buttons"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 0
offset_left = 770.0
offset_top = 635.0
offset_right = 950.0
offset_bottom = 711.0
theme_override_font_sizes/font_size = 24
text = "Swap to
Western Reference"

[node name="interaction_zones" type="Node2D" parent="."]

[node name="mouse" type="Area2D" parent="interaction_zones"]
collision_mask = 0

[node name="mouse_box" type="CollisionShape2D" parent="interaction_zones/mouse"]
shape = SubResource("CircleShape2D_dx85r")

[node name="scars" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/scars"]
position = Vector2(581.75, 305)
shape = SubResource("RectangleShape2D_dx85r")

[node name="jaw" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/jaw"]
position = Vector2(616, 163)
shape = SubResource("RectangleShape2D_64s04")

[node name="helmet" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/helmet"]
position = Vector2(613, 83.75)
shape = SubResource("RectangleShape2D_3e5nl")

[node name="hands" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/hands"]
position = Vector2(536.5, 387)
shape = SubResource("RectangleShape2D_r27ss")

[node name="area2" type="CollisionShape2D" parent="interaction_zones/hands"]
position = Vector2(761, 379)
shape = SubResource("RectangleShape2D_r27ss")

[node name="cypress" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/cypress"]
position = Vector2(848.555, 277.584)
rotation = 0.598648
shape = SubResource("RectangleShape2D_cvgrv")

[node name="area2" type="CollisionShape2D" parent="interaction_zones/cypress"]
position = Vector2(673.975, 534.685)
rotation = 0.598648
shape = SubResource("RectangleShape2D_6ttcb")

[node name="name" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/name"]
position = Vector2(243, 53)
shape = SubResource("RectangleShape2D_mjlt5")

[node name="armor" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/armor"]
position = Vector2(244, 103)
shape = SubResource("RectangleShape2D_mjlt5")

[node name="dent" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="interaction_zones/dent"]
position = Vector2(640, 230.25)
shape = SubResource("RectangleShape2D_ty7bg")

[node name="away_space" type="Area2D" parent="interaction_zones"]
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="interaction_zones/away_space"]
polygon = PackedVector2Array(52, 5, 51, 23, 437, 23, 441, 126, 56, 129, 43, 41, 39, 2, -1, 11, -2, 719, 649, 714, 637, 680, 528, 614, 694, 388, 653, 344, 585, 355, 570, 453, 490, 448, 500, 252, 581, 252, 580, 208, 529, 207, 529, 41, 586, 38, 723, 38, 711, 212, 665, 319, 701, 368, 859, 163, 944, 222, 658, 678, 665, 723, 758, 721, 764, 627, 981, 627, 993, 27, 956, 3)

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 1.0
offset_right = 961.0
offset_bottom = 720.0
texture = ExtResource("12_i428j")

[node name="Timer" type="Timer" parent="TextureRect"]
wait_time = 1.5
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect"]
libraries = {
&"": SubResource("AnimationLibrary_hmt25")
}

[connection signal="toggled" from="selector_buttons/outfit_selectors/helmet_box/helmet_button" to="." method="_on_helmet_button_toggled"]
[connection signal="toggled" from="selector_buttons/outfit_selectors/hair_box/hair_button" to="." method="_on_hair_button_toggled"]
[connection signal="toggled" from="selector_buttons/outfit_selectors/chest_plate_box/chest_plate_button" to="." method="_on_chest_plate_button_toggled"]
[connection signal="toggled" from="selector_buttons/outfit_selectors/shawl_box/shawl_button" to="." method="_on_shawl_button_toggled"]
[connection signal="toggled" from="selector_buttons/outfit_selectors/kama_box/kama_button" to="." method="_on_kama_button_toggled"]
[connection signal="toggled" from="selector_buttons/outfit_selectors/belt_box/belt_button" to="." method="_on_belt_button_toggled"]
[connection signal="pressed" from="selector_buttons/outfit_selectors/flight_suit_box/flight_suit_down" to="." method="_on_flight_suit_down_pressed"]
[connection signal="pressed" from="selector_buttons/outfit_selectors/flight_suit_box/flight_suit_up" to="." method="_on_flight_suit_up_pressed"]
[connection signal="pressed" from="selector_buttons/Button" to="." method="_on_button_pressed"]
[connection signal="area_entered" from="interaction_zones/scars" to="." method="_on_scars_area_entered"]
[connection signal="area_entered" from="interaction_zones/jaw" to="." method="_on_jaw_area_entered"]
[connection signal="area_entered" from="interaction_zones/helmet" to="." method="_on_helmet_area_entered"]
[connection signal="area_entered" from="interaction_zones/hands" to="." method="_on_hands_area_entered"]
[connection signal="area_entered" from="interaction_zones/cypress" to="." method="_on_cypress_area_entered"]
[connection signal="area_entered" from="interaction_zones/name" to="." method="_on_name_area_entered"]
[connection signal="area_entered" from="interaction_zones/armor" to="." method="_on_armor_area_entered"]
[connection signal="area_entered" from="interaction_zones/dent" to="." method="_on_dent_area_entered"]
[connection signal="area_entered" from="interaction_zones/away_space" to="." method="_on_away_space_area_entered"]
[connection signal="timeout" from="TextureRect/Timer" to="." method="_on_timer_timeout"]
